@@ -22,6 +22,7 @@
 13. Dont display stream URL as sub-text, it makes the view look messy for no
     real gain. (URL is still shown in tooltip)
 14. Detailed tree view for playlists by default.
+15. Remove config compatibility with Cantata versions older than 0.7
 
 1.0.3
 -----
